cf-staticweb-deploy.yml
AWSTemplateFormatVersion: 2010-09-09
Description: |
  CloudFormation template for static website on ec2.This template deploys Static website on Amazon Linux 2 Ec2 .Instance with custom security group allowing http connections on port 80.static website is downloaded from github repository,then deployed on Apache Web Server.

Resources: 
  WebServerSecurityGroup: 
    Type: "AWS::EC2::SecurityGroup"
    Properties:
      GroupDescription: Enable HTTP for Apache Web Server
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: my first security group from cloudformation 

  WebServerHost:
    Type: "AWS::EC2::Instance"
    Properties:     
      ImageId: ami-0c94855ba95c71c99
      InstanceType: t2.micro
      KeyName: cf-demo
      SecurityGroupIds:
        - !Ref WebServerSecurityGroup
      Tags:
        - Key: Name
          Value: !Sub Web Server of ${AWS::StackName} Stack
      UserData: 
        Fn::Base64:
          !Sub |
            #! /bin/bash
            yum update -y 
            yum install httpd -y 
            cd /var/www/html/
            wget https://raw.githubusercontent.com/AysunOzer/StaticWebSite-Deploy-CloudFormation/master/static-web/index.html
            wget https://raw.githubusercontent.com/AysunOzer/StaticWebSite-Deploy-CloudFormation/master/static-web/cat1.jpg
            wget https://raw.githubusercontent.com/AysunOzer/StaticWebSite-Deploy-CloudFormation/master/static-web/cat0.jpg
            wget https://raw.githubusercontent.com/AysunOzer/StaticWebSite-Deploy-CloudFormation/master/static-web/cat2.jpg
            systemctl start httpd
            systemctl enable httpd       
  
Outputs:
  WebsiteURL: #istedigin ismi yaz  outlukta gorunucek
    Value: !Sub 
      - http://${PublicAddress} #public adressi asagidan al
      - PublicAddress: !GetAtt WebServerHost.PublicDnsName 
    Description: Static WebSite Aplication URL
